# swears-begone

./: .gitignore  Dockerfile  LICENSE  README.md  build_mute_swears_cmd.sh  clean-video  clean_video.sh  config.py  main.py  pyproject.toml  requirements.txt  swears-begone.py  swears.txt  todo.txt
src/swears_begone/: __init__.py  __main__.py  cli.py  config.py  ffmpeg_helper.py  main.py  search.py  sub_helper.py  swears_parser.py  whisper_helper.py
src/swears_begone/data/: swears.txt
utils/: __init__.py  ffmpeg_helper.py  file_helper.py  search.py  sub_helper.py  swears_parser.py  whisper_helper.py
