[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swears-begone"
version = "0.1.0"
description = "A CLI tool for filtering profanity from videos with Whisper"
dependencies = [
    "whisperx",
    "srt>=3.5.0",
    "subliminal>=2.0.0"
]

[tool.setuptools.package-data]
"swears_begone" = ["*.txt", "data/*.txt"]

[project.scripts]
swears-begone = "swears_begone.cli:main"